fixed some link formatting

--- a/jQuery.textGauge.css
+++ b/jQuery.textGauge.css
@@ -1,6 +1,6 @@
 /* http://karimnassar.com/textgague v1.0 by Karim Nassar 
  * Copyright Karim Nassar. Licensed under MIT License
- * License text at https://karimnassar.com/textgague/license
+ * License text at http://karimnassar.com/textgague/license
  */
 
 .textGauge + div.textGauge-outer-bar {
